2017-04-26  Said Abou-Hallawa  <sabouhallawa@apple.com>

        Restrict WebKit image formats to a known whitelist
        https://bugs.webkit.org/show_bug.cgi?id=170700

        Reviewed by Tim Horton.

        * fast/images/image-formats-support-expected.txt: Added.
        * fast/images/image-formats-support.html: Added.
        * fast/images/resources/100x100-red-psd-renamed.png: Added.
        * fast/images/resources/100x100-red-tga-renamed.png: Added.
        * fast/images/resources/100x100-red.psd: Added.
        * fast/images/resources/100x100-red.tga: Added.

2017-04-26  Matt Lewis  <jlewis3@apple.com>

        Mark swipe/main-frame-pinning-requirement.html as a flaky failure on mac-wk2.
        https://bugs.webkit.org/show_bug.cgi?id=170484

        Reviewed by Alexey Proskuryakov.

        * platform/mac-wk2/TestExpectations:

2017-04-26  Chris Dumez  <cdumez@apple.com>

        Re-sync html/browsers/the-window-object web-platform-tests from upstream
        https://bugs.webkit.org/show_bug.cgi?id=171313

        Reviewed by Alex Christensen.

        * tests-options.json:

2017-04-26  Joanmarie Diggs  <jdiggs@igalia.com>

        [ATK] Implement support for new ARIA 1.1 values of aria-haspopup
        https://bugs.webkit.org/show_bug.cgi?id=171164

        Reviewed by Chris Fleizach.

        In addition to the new test, update xml-roles-exposed.html's expectations
        because the implicit value of aria-haspopup for the combobox role is now
        listbox, and that value should be exposed via an AtkObject attribute.

        * accessibility/gtk/aria-haspopup-expected.txt: Added.
        * accessibility/gtk/aria-haspopup.html: Added.
        * accessibility/gtk/xml-roles-exposed-expected.txt:

2017-04-26  Simon Fraser  <simon.fraser@apple.com>

        http/tests/frame-throttling tests failing on iOS
        https://bugs.webkit.org/show_bug.cgi?id=171314
        rdar://problem/31691134

        Reviewed by Chris Dumez.
