@@ -96,7 +96,6 @@ http/tests/ssl/media-stream
 imported/w3c/web-platform-tests/webrtc [ Skip ]
 webrtc [ Skip ]
 webrtc/datachannel [ Pass ]
-webrtc/datachannel/bufferedAmountLowThreshold.html [ Failure ]
 webrtc/captureCanvas-webrtc.html [ Pass ]
 
 # These tests test the Shadow DOM based HTML form validation UI but Mac WK1 is using native dialogs instead.
