@@ -1,5 +1,3 @@
-CONSOLE MESSAGE: line 73: channel send is throwing
-CONSOLE MESSAGE: line 73: channel send is throwing
 
 PASS Default buffer threshold 
 PASS Large buffer threshold reached 
